--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snapdragon vs MediaTek</title>
+    <title>Pinsite - Bandingkan Chipset Terbaik</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -56,5 +56,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- PENTING: Script ini diperlukan agar aplikasi React berjalan -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
