--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             },
             keyframes: {
               fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '0%': { opacity: '0', transform: 'translateY(30px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
               }
             }
@@ -44,6 +44,7 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #ffffff;
+        scroll-behavior: smooth;
       }
       .scroll-hidden::-webkit-scrollbar {
         display: none;
