feat: Refine UI elements and title
Adjusted navigation capsule padding and spacing for better visual hierarchy. Modified text alignment in BrandSection to left-align descriptions. Updated the page title in index.html to "CLI 50.11.0".

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pinsite - Bandingkan Chipset Terbaik</title>
+    <title>CLI 50.11.0</title>
     <link rel="icon" href="https://png.pngtree.com/png-clipart/20191122/original/pngtree-vector-star-icon-png-image_5169247.jpg" />
     <!-- Tailwind CSS via CDN (Runtime) -->
     <script src="https://cdn.tailwindcss.com"></script>
