feat: Optimize performance and UX
Improves loading times by preconnecting to essential domains and prefetching DNS. Enhances visual smoothness on mobile devices by slightly reducing header padding and refining element positioning. Optimizes hero section animations with `will-change-transform` for better GPU utilization. Introduces thumbnail support and rearranges gallery items for better media presentation.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pinsite 50.11.0 - CLI</title>
     <link rel="icon" href="https://png.pngtree.com/png-clipart/20191122/original/pngtree-vector-star-icon-png-image_5169247.jpg" />
+    
+    <!-- Performance Optimization: Preconnect & DNS Prefetch -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://res.cloudinary.com">
+    <link rel="dns-prefetch" href="https://files.catbox.moe">
+    <link rel="dns-prefetch" href="https://cdn.tailwindcss.com">
+
     <!-- Tailwind CSS via CDN (Runtime) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
